[gd_scene load_steps=8 format=3 uid="uid://c6biv2mqykjcg"]

[ext_resource type="Script" path="res://Src/Entities/Obstacles/ArrowShooter/Arrow.gd" id="1_6bkri"]
[ext_resource type="Texture2D" uid="uid://b8la8ld06g04" path="res://Assets/Obstacles/arrow_shooter.png" id="1_342es"]
[ext_resource type="PackedScene" uid="uid://cnm077r8cak41" path="res://Src/Common/Components/Hurtbox/HurtboxComponent.tscn" id="2_2u0hl"]
[ext_resource type="PackedScene" uid="uid://cvsgunn02v50s" path="res://Src/Common/Components/Hurtbox/HitboxComponent.tscn" id="3_7xiyr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_864ow"]
size = Vector2(14, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_036uj"]
size = Vector2(6, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tpgf6"]
size = Vector2(6, 2)

[node name="Arrow" type="Area2D"]
collision_layer = 0
script = ExtResource("1_6bkri")

[node name="HurtboxComponent" parent="." instance=ExtResource("2_2u0hl")]
collision_layer = 4
lives = 1

[node name="CollisionShape2D" parent="HurtboxComponent" index="0"]
shape = SubResource("RectangleShape2D_864ow")

[node name="HitboxComponent" parent="." instance=ExtResource("3_7xiyr")]
collision_mask = 2

[node name="CollisionShape2D" parent="HitboxComponent" index="0"]
position = Vector2(3, 1)
shape = SubResource("RectangleShape2D_036uj")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 0)
texture = ExtResource("1_342es")
region_enabled = true
region_rect = Rect2(3, 2, 13, 5)

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 0)
shape = SubResource("RectangleShape2D_tpgf6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]

[editable path="HurtboxComponent"]
[editable path="HitboxComponent"]
